# assisten-AI

./: .env.example  .gitignore  README.md  architecture-webbased.mermaid  start-pointer.bat
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: context_builder_agent.py  correction_detection_agent.py  expression_analysis_agent.py  face_engagement_agent.py  history_hydration_agent.py  light_chat_agent.py  llm_stream_agent.py  name_extraction_agent.py  search_agent.py  speech_prep_agent.py  stt_agent.py
backend/app/api/: chat.py  face.py  knowledge.py  websocket.py
backend/app/core/: orchestrator.py  persona.py  viseme.py
backend/app/recognition/: face_database.py
backend/app/services/: chat_history.py  face_recognition.py  knowledge_base.py  llm_groq.py  llm_nvidia.py  llm_openrouter.py  llm_router.py  search_tavily.py  stt_groq.py  tts_azure.py  tts_edge.py
backend/tests/: test_persona.py  test_viseme.py
data/personas/: pointer.json
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: CameraView.tsx  ChatInterface.tsx  OrbVisualizer.tsx  VadListener.tsx  VoiceRecorder.tsx
frontend/lib/: audioQueue.ts  faceApi.ts  store.ts  types.ts  wav.ts  websocket.ts
scripts/: setup_windows.ps1  test_chat.py  test_face.py  test_voice.py
