[project]
name = "ai-avatar-backend"
version = "0.1.0"
description = "AI Avatar Companion backend — FastAPI + Groq + Edge TTS"
requires-python = ">=3.11,<3.13"
dependencies = [
    "azure-cognitiveservices-speech>=1.50.0",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "insightface>=0.7.3",
    "loguru>=0.7.3",
    "numpy<2",
    "onnxruntime>=1.26.0",
    "openai>=2.37.0",
    "opencv-python-headless>=4.11.0.86",
    "pydantic-settings>=2.14.1",
    "pydub>=0.25.1",
    "python-multipart>=0.0.29",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
